--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="eg1">
+		<h1 class="eg2">Testimonials</h1>
+		<div class="eg3">
+			<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+		<p class="eg5">
+			John Doe</p>
+		</div>
+		<div class="eg4"><p>I have been using for a few weeks now and it is hs completely transformed my window.</p>
+
+			<p class="eg5">
+			John Doe</p>
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
